--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
   
-.header {
+header {
     height: 600px;
 }
 body {
@@ -57,9 +57,9 @@ button {
     margin-top: 10%;
 }
 .text-aboutme {
-    text-align: center;
-    margin-left: 30%;
-    margin-right: 30%;
+    text-align: justify;
+    margin-left: 35%;
+    margin-right: 35%;
     margin-top: 4%;
 }
 a {
@@ -67,8 +67,35 @@ a {
     color:#F5F5F5;
 }
 .myinterests {
-    text-align: center;
+    text-align: justify;
     margin-left: 35%;
     margin-right: 35%;
     margin-top: 4%;
 }
+.submit-reset {
+    color: #fff; 
+    text-decoration: none; 
+    user-select: none; 
+    background: rgb(212,75,56);
+    padding: .7em 1.5em; 
+    outline: none;
+    margin-top: 3%;
+}
+.client-name {
+    margin-top: 5%;
+}
+.client-email {
+    margin-top: 2%;
+}
+.your-phone {
+    margin-top: 2%;
+}
+.dots {
+    display: block;
+    font-size: 2em;
+    font-weight: bold;
+}
+.header-informationaboutme {
+    max-height: 150px;
+}
+
