--- a/css/index.css
+++ b/css/index.css
@@ -56,3 +56,15 @@ a {
     text-decoration: none;
     color:#F5F5F5;
 }
+.dudych-on-bike {
+    max-width: 400px;
+    max-height: 300px;
+}
+.dudych-near-airport {
+    max-width: 400px;
+    max-height: 300px;
+}
+.dudych-in-kiev {
+    max-width: 400px;
+    max-height: 400px;
+}
