--- a/css/index.css
+++ b/css/index.css
@@ -12,8 +12,8 @@ body {
 }
 .header-text {
     margin-top: 15%;
-    margin-left: 36%;
-    margin-right: 35%
+    margin-left: 15%;
+    margin-right: 15%;
 }
 .dots {
     font-size: 3em;
@@ -23,8 +23,8 @@ body {
 }
 .abouttext {
     margin-top: 15%;
-    margin-left: 36%;
-    margin-right: 35%
+    margin-left: 15%;
+    margin-right: 15%
 }
 button {
     color: #fff; 
@@ -34,9 +34,6 @@ button {
     padding: .7em 1.5em; 
     outline: none;
 } 
-.myphotos {
-    height: 600px;
-}
 .contactme {
     height: 600px;   
 }
@@ -68,106 +65,11 @@ a {
     max-width: 400px;
     max-height: 400px;
 }
-.menu {
-	position: fixed;
-	right: -200px;
-	width: 260px;
-	height: 100%;
-	top: 0;
-	z-index: 10;
-	text-align: left;
-}
 
-.menu.menu-open {
-	right: 0px;
-}
 
-.menu-wrap {
-	position: absolute;
-	top: 0;
-	left: 60px;
-	background: #1a1a1a;
-	width: 200px;
-	height: 100%;
-}
-
-.menu h1.logo a {
-	font-family: 'Oswald', sans-serif;
-	font-size: 16px;
-	font-weight: 700;
-	letter-spacing: 0.15em;
-	line-height: 40px;
-	text-transform: uppercase;
-	color: #ffffff;
-	margin-top: 20px;
-}
-
-.menu h1.logo a:hover {
-	color: #f85c37;
-}
-
-.menu img.logo {
-	margin: 20px 0;
-	max-width: 160px;
-}
-
-.menu a {
-	margin-left: 20px;
-	color: #808080;
-	display: block;
-	font-size: 12px;
-	font-weight: 700;
-	line-height: 40px;
-	letter-spacing: 0.1em;
-	text-transform: uppercase;
-}
-
-.menu a:hover {
-	color: #ffffff;
-}
-
-.menu a:active {
-	color: #ffffff;
-}
-
-.menu a > i {
-	float: left;
-	display: inline-block;
-	vertical-align: middle; 
-	text-align: left;
-	width: 25px;
-	font-size: 14px;
-	line-height: 40px;
-	margin: 25px 2px;
-}
-
-.menu-close {
-	cursor: pointer;
-	display: block;
-	position: absolute;
-	font-size: 14px;
-	color: #808080;
-	width: 40px;
-	height: 40px;
-	line-height: 40px;
-	top: 20px;
-	right: 5px;
-	-webkit-transition: all .1s ease-in-out;
-	   -moz-transition: all .1s ease-in-out;
-		-ms-transition: all .1s ease-in-out;
-		 -o-transition: all .1s ease-in-out;
-			transition: all .1s ease-in-out;
-}
-
-.menu-close:hover {
-	color: #ffffff;
-	-webkit-transition: all .1s ease-in-out;
-	   -moz-transition: all .1s ease-in-out;
-		-ms-transition: all .1s ease-in-out;
-		 -o-transition: all .1s ease-in-out;
-			transition: all .1s ease-in-out;
-}
-.d-block w-100 {
-	max-height: 400;
-	max-width: 300;
+#website-home {
+	position:fixed;
+	width: 100%;
+	margin-top: -15%;
+	z-index: 999999;
 }
